--- a/src/sections/portfolio/portfolio.scss
+++ b/src/sections/portfolio/portfolio.scss
@@ -146,7 +146,7 @@
     display: block;
 
     .portfolio__card-block{
-    @include flex(streth, flex-start, column);
+      @include flex(stretch, flex-start, column);
     }
 
     width: 100%;
@@ -159,7 +159,7 @@
 
   &__wrapper.to-left {
     .portfolio__card-block {
-      @include flex(streth, flex-start, column);
+      @include flex(stretch, flex-start, column);
     }
   }
 
@@ -175,6 +175,10 @@
     background-image: url('images/projects/ulbi-production.png');
   }
 
+  &__card.code-gear {
+    background-image: url('images/projects/code-gear.png');
+  }
+
   &__card {
     display: none;
     position: relative;
@@ -188,7 +192,8 @@
 
     cursor: pointer;
     height: 388px;
-    background-size: cover;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
     border-radius: 6px;
 
     &:hover {
