--- a/src/globals/scss/media-queries.scss
+++ b/src/globals/scss/media-queries.scss
@@ -80,8 +80,10 @@
   .container { max-width: 720px; }
 
   .about__banner {
-    max-width: 459px;
+    max-width: 210px;
     margin-inline: auto;
+    border-radius: 33% 0;
+    overflow: hidden;
   }
 }
 
@@ -96,6 +98,11 @@
       .strong {
         left: 40%;
       }
+    }
+  }
+  .about {
+    &__banner {
+      display: block;
     }
   }
 
@@ -311,6 +318,10 @@
 
   .back-top-btn{
     display: grid;
+  }
+
+  .about__banner {
+    max-width: 330px;
   }
 
   .container { max-width: 1140px; }
