--- a/src/sections/main/main.scss
+++ b/src/sections/main/main.scss
@@ -49,6 +49,7 @@
 
   &__banner {
     max-width: 150px;
+    //height: 150px;
     margin-inline: auto;
     margin-block-end: 20px;
     border-radius: 100%;
