--- a/src/sections/skills/skills.scss
+++ b/src/sections/skills/skills.scss
@@ -9,7 +9,7 @@
   padding-bottom: 0;
 
   .container{
-    padding-bottom: 60px;
+    padding-bottom: 30px;
     border-bottom: 1px solid var(--white-a80);
   }
 
@@ -54,14 +54,14 @@
   }
 
   &__wrapper-block{
-    margin-top: 10px;
-    margin-bottom: 8px;
+    margin-top: 15px;
+    margin-bottom: 20px;
 
     @include flex;
 
     flex-wrap: wrap;
     width: 100%;
-    gap: 7px;
+    gap: 9px;
   }
 
   &__wrapper-icon{
@@ -73,7 +73,7 @@
     @include flex-center;
 
     transition: var(--transition-1) 0.1s;
-    border-radius: 0;
+    border-radius: 0 3px 0 3px;
     width: 45%;
     padding: 15px;
     font-size: 1.65rem;
