added virtual-flow project, updates:

--- a/src/sections/portfolio/portfolio.scss
+++ b/src/sections/portfolio/portfolio.scss
@@ -200,8 +200,8 @@
     background-image: url('images/projects/grnx-utils.png');
   }
 
-  &__card.commercial-projects {
-    background-image: url('images/projects/commercial-projects.png');
+  &__card.virtual-flow {
+    background-image: url('images/projects/virtual-flow.png');
   }
 
   &__card {
